--- a/myinatagram/src/main/res/values/styles.xml
+++ b/myinatagram/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/skyBlue</item>
     </style>
 
+    <style name="TextInstagramBottomNav" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/selector_text_bottom_nav</item>
+    </style>
 </resources>
