--- a/myinatagram/src/main/res/values/colors.xml
+++ b/myinatagram/src/main/res/values/colors.xml
@@ -4,4 +4,17 @@
     <color name="white">#fff</color>
     <color name="skyBlue">#7db9ff</color>
     <color name="greyishBrown">#3c3c3c</color>
+
+    <color name="txt_white_gray">#D5D5D5</color>
+    <color name="txt_medium_gray">#909090</color>
+    <color name="txt_dark_gray">#606060</color>
+
+    <color name="image_picker_camera_background">#606060</color>
+    <color name="image_picker_primary">#1976d2</color>
+    <color name="image_picker_primary_pressed">#0956b2</color>
+    <color name="image_picker_empty_selected_background">#dedede</color>
+    <color name="image_picker_toolbar_background">@color/white</color>
+    <color name="image_picker_selected_media_clear_background">#d0909090</color>
+    <color name="image_picker_scroller_background">#fafafa</color>
+
 </resources>
