--- a/myinatagram/src/main/res/values/colors.xml
+++ b/myinatagram/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#000</color>
+    <color name="black">#000000</color>
+    <color name="black_87">#de000000</color>
+    <color name="black_54">#8a000000</color>
+    <color name="black_30">#1d000000</color>
+    <color name="black_20">#14000000</color>
+
     <color name="white">#fff</color>
     <color name="skyBlue">#7db9ff</color>
     <color name="greyishBrown">#3c3c3c</color>
@@ -9,7 +14,10 @@
     <color name="txt_medium_gray">#909090</color>
     <color name="txt_dark_gray">#606060</color>
 
-    <color name="image_picker_camera_background">#606060</color>
+    <color name="white_50">#80ffffff</color>
+    <color name="very_light_pink_twelve">#80d8d8d8</color>
+    <color name="azure">#0091ff</color>
+
     <color name="image_picker_primary">#1976d2</color>
     <color name="image_picker_primary_pressed">#0956b2</color>
     <color name="image_picker_empty_selected_background">#dedede</color>
