--- a/myinatagram/src/main/res/values/dimens.xml
+++ b/myinatagram/src/main/res/values/dimens.xml
@@ -16,11 +16,13 @@
     <dimen name="toolbar_elevation">0dp</dimen>
     <dimen name="default_radius">3dp</dimen>
 
+    <dimen name="spinner_item_height">45dp</dimen>
+
 
     <dimen name="list_item_container_padding">16dp</dimen>
     <dimen name="list_item_container_padding_small">8dp</dimen>
 
-    <dimen name="list_item_avatar_size_small">24dp</dimen>
+    <dimen name="list_item_avatar_size_small">20dp</dimen>
     <dimen name="list_item_avatar_size">40dp</dimen>
     <dimen name="list_item_avatar_size_large">56dp</dimen>
     <dimen name="list_item_avatar_size_xlarge">72dp</dimen>
