--- a/myinatagram/src/main/res/layout/fragment_photo.xml
+++ b/myinatagram/src/main/res/layout/fragment_photo.xml
@@ -7,10 +7,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.yalantis.ucrop.view.UCropView
+        <com.tistory.blackjin.myinatagram.customview.MyUCropView
             android:id="@+id/ucrop"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@color/black_87"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
