--- a/myinatagram/src/main/res/layout/item_my_gallery_media.xml
+++ b/myinatagram/src/main/res/layout/item_my_gallery_media.xml
@@ -6,7 +6,7 @@
 
     <data>
 
-        <import type="com.tistory.blackjin.myinatagram.builder.type.SelectType" />
+        <import type="com.tistory.blackjin.myinatagram.type.SelectType" />
 
         <import type="android.view.View" />
 
